tests/baselines/reference/unicodeInModuleSpecifierError1.errors.txt
main.ts(1,10): error TS2305: Module '"./游부.ts"' has no exported member 'bar'.
main.ts(1,15): error TS2459: Module '"./游부.ts"' declares 'baz' locally, but it is not exported.
main.ts(2,10): error TS2305: Module '"./游부.ts"' has no exported member 'bar'.
main.ts(2,15): error TS2459: Module '"./游부.ts"' declares 'baz' locally, but it is not exported.


==== 游부.ts (0 errors) ====
    export const foo = "bar";
    const baz = "baz";
    
==== main.ts (4 errors) ====
    import { bar, baz } from './游부.ts';
             ~~~
!!! error TS2305: Module '"./游부.ts"' has no exported member 'bar'.
                  ~~~
!!! error TS2459: Module '"./游부.ts"' declares 'baz' locally, but it is not exported.
!!! related TS2728 游부.ts:2:7: 'baz' is declared here.
    export { bar, baz } from './游부.ts';
             ~~~
!!! error TS2305: Module '"./游부.ts"' has no exported member 'bar'.
                  ~~~
!!! error TS2459: Module '"./游부.ts"' declares 'baz' locally, but it is not exported.
!!! related TS2728 游부.ts:2:7: 'baz' is declared here.
    